STM32_workspace_9.3/.metadata/.plugins/org.eclipse.cdt.ui/001_system_clock_config_and_pill.build.log
13:00:13 **** Incremental Build of configuration Debug for project 001_system_clock_config_and_pill ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c ..\src\main.c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DSTM32F4XX -DSTM32F40XX -DUSE_STDPERIPH_DRIVER -DUSE_STM32F4_DISCOVERY -DHSE_VALUE=8000000 -I../src -I../Libraries/CMSIS/Include -I../Libraries/Device/STM32F4xx/Include -I../Libraries/STM32F4xx_StdPeriph_Driver/inc -I../Utilities/STM32F4-Discovery -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o src\main.o 
..\src\main.c: In function 'main':
..\src\main.c:8:2: error: 'i' undeclared (first use in this function)
  i=5;
  ^
..\src\main.c:8:2: note: each undeclared identifier is reported only once for each function it appears in

13:00:13 Build Finished (took 357ms)

